crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0414_str_main.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0414]: `main` returns `str`, which is not a type the process can be handed
 --> mem:///main.lu:1:11
  |
1 | fn main() -> str {
  |           ^^^^^^ the process can take an exit status from `()`, `int`, or an error union over them
  |
  = note: the entry's legal shapes: `fn main()`, `fn main() -> int`, `fn main() -> !int` (and
    `!()` / an explicit error row over `int` or `()`). An ok value becomes the exit status;
    an error value prints `error: <tag>` and exits 1 (D30).
