crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0415_default_i32_overflow.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0415]: `9223372036854775807` does not fit `i32`
 --> mem:///main.lu:2:13
  |
2 |     let a = 9223372036854775807
  |             ^^^^^^^^^^^^^^^^^^^ i32 holds -2147483648..=2147483647
  |
  = note: an integer literal takes its type from context, and a binding without one defaults to
    `i32` ([type.numlit.default]) — annotate a type that holds the value (`let n: i64 = …`)
