crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0415_negative_and_unsigned.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0415]: `-3000000000` does not fit `i32`
 --> mem:///main.lu:2:18
  |
2 |     let a: i32 = -3000000000
  |                  ^^^^^^^^^^^ i32 holds -2147483648..=2147483647
  |
  = note: an integer literal takes its type from context, and a binding without one defaults to
    `i32` ([type.numlit.default]) — annotate a type that holds the value (`let n: i64 = …`)

error[E0415]: `256` does not fit `u8`
 --> mem:///main.lu:3:17
  |
3 |     let b: u8 = 256
  |                 ^^^ u8 holds 0..=255
  |
  = note: an integer literal takes its type from context, and a binding without one defaults to
    `i32` ([type.numlit.default]) — annotate a type that holds the value (`let n: i64 = …`)
