crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0416_str_index_and_compound.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0416]: cannot assign through a `str` index: `s` is immutable
 --> mem:///main.lu:3:5
  |
3 |     s[1] = "o"
  |     - this is a `str`
  |     ^^^^ an index of a `str` is a view, not a place
  |
  = note: a `str` never changes after it is built ([mem.str.imm]); an index or slice reads its
    bytes and cannot be written through, on any lane.
  = note: build the new text and assign it to `s`: slice the pieces out and write `s =
    "{head}{bit}{tail}"`, or `s = head + bit + tail`; `std.strbuf` is the builder for a hot
    loop.

error[E0416]: cannot assign through a `str` slice: `s` is immutable
 --> mem:///main.lu:4:5
  |
4 |     s[1..2] += "o"
  |     - this is a `str`
  |     ^^^^^^^ a slice of a `str` is a view, not a place
  |
  = note: a `str` never changes after it is built ([mem.str.imm]); an index or slice reads its
    bytes and cannot be written through, on any lane.
  = note: build the new text and assign it to `s`: slice the pieces out and write `s =
    "{head}{bit}{tail}"`, or `s = head + bit + tail`; `std.strbuf` is the builder for a hot
    loop.
