crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0417_map_compound_assign.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0417]: cannot update `totals["drink"]` in place: the key may be absent
 --> mem:///main.lu:4:5
  |
4 |     totals["drink"] += 100
  |     ------ `totals` is a `Map`
  |     ^^^^^^^^^^^^^^^ a `Map` index is a row, not a place
  |
  = note: `m[k]` is `V ! {none}` ([mem.map.absent]): reading it asks whether the key is bound, and
    an absent key has no value to update. `m[k] = v` alone inserts or replaces.
  = note: spell the two halves — `totals["drink"] = (totals["drink"] else 0) + …` — or count with
    std's named operation, `map.tally(mut totals, k)` (`use std.map`), which is that
    statement for an `int`-valued map.

error[E0417]: cannot update `totals["food"]` in place: the key may be absent
 --> mem:///main.lu:5:5
  |
5 |     totals["food"] -= 1
  |     ------ `totals` is a `Map`
  |     ^^^^^^^^^^^^^^ a `Map` index is a row, not a place
  |
  = note: `m[k]` is `V ! {none}` ([mem.map.absent]): reading it asks whether the key is bound, and
    an absent key has no value to update. `m[k] = v` alone inserts or replaces.
  = note: spell the two halves — `totals["food"] = (totals["food"] else 0) - …` — or count with
    std's named operation, `map.tally(mut totals, k)` (`use std.map`), which is that
    statement for an `int`-valued map.
