crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0419_empty_list_no_context.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0419]: `[]` does not say what `cents` holds
 --> mem:///main.lu:2:17
  |
2 |     let cents = []
  |                 ^^ an empty list literal has no element to read a type from
  |
  = note: annotate the binding and the literal takes its element type from the annotation — `let
    cents: List[int] = []`, with the element type you mean. Every other position already
    supplies one (a call argument, a field, a declared return), so `[]` is written bare
    everywhere except here. A literal with elements needs nothing: `let xs = [1, 2, 3]`.
