crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0502_literal_default_no_candidate.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0502]: `i32` does not implement `Tag`, which `name` requires of `T`
 --> mem:///main.lu:8:16
  |
5 | fn name[T: Tag](x: T) -> str { x.tag() }
  |            --- the bound is declared here
...
8 |     print(name(3))
  |                ^ this is `i32`
  |
  = note: this is an integer literal with nothing to pin its type but `T`, so it takes the literal
    default, `i32` ([type.numlit.default]) — and no integer type implements `Tag`.
  = note: write `impl Tag for i32` in the trait's module or the type's module — or, when both are
    foreign, adapt: `type Local = distinct i32` and implement the trait for the adapter.
