crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0502_literal_default_two_candidates.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0502]: `i32` does not implement `Tag`, which `name` requires of `T`
  --> mem:///main.lu:16:16
   |
13 | fn name[T: Tag](x: T) -> str { x.tag() }
   |            --- the bound is declared here
...
16 |     print(name(3))
   |                ^ this is `i32`
   |
   = note: this is an integer literal with nothing to pin its type but the bound, and `i64` and
     `u8` both implement `Tag` — so it takes the literal default, `i32`
     ([type.numlit.default]). Say which one: `let n: i64 = …`, or a spelled cast.
   = note: write `impl Tag for i32` in the trait's module or the type's module — or, when both are
     foreign, adapt: `type Local = distinct i32` and implement the trait for the adapter.
